5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1578_1330.log
== SUBMITION (2019-03-31 14:38:44) 
-- CODE:
x=250
print(x,2)
-- EXECUTION TIME:
0.13293
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:40:28) 
-- CODE:
print(round(250,6)2))
-- EXECUTION TIME:
0.121395
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round(250,6)2))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:40:35) 
-- CODE:
print(round(250,6)2))
-- ERROR:
File "XXXX", line 1
    print(round(250,6)2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:40:52) 
-- CODE:
print(round((250,6)2))
-- EXECUTION TIME:
0.130505
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round((250,6)2))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:41:08) 
-- CODE:
print(round((250/6)2))
-- EXECUTION TIME:
0.220393
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round((250/6)2))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:41:20) 
-- CODE:
print(round((250/6),2))
-- EXECUTION TIME:
0.113568
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:41:36) 
-- CODE:
print(round((250/6),2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
